--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
 
   </ul>
   </li>
-  <li><a href="./About/about.html">About Us
+  <li><a href="./
+      
+      /about.html">About Us
           </a>
   <li><a href="./contact/contact.html">Contact</a></li>
   <li><a href="./faq/faq.html">FAQ</a></li>
@@ -278,14 +280,11 @@
                     memudahkan para pemilik hewan 
                     peliharaan dalam menitipkan hewan 
                     peliharaannya</p>
-                <button class="btn btn-secondary">Read More</button>
+                <button class="btn btn-secondary"><a href="./About/about.html">Read More</a></button>
             </div>
             <div class="box">
                 <h3>Quik Links</h3>
                 <ul>
-                    <li>
-                        <a href="./About/about.html">About us</a>
-                    </li>
                     <li>
                         <a href="#">Products</a>
                     </li>
