text-decoration on about us

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     memudahkan para pemilik hewan 
                     peliharaan dalam menitipkan hewan 
                     peliharaannya</p>
-                <button class="btn btn-secondary"><a href="./About/about.html">Read More</a></button>
+                <button class="btn btn-secondary"><a href="./About/about.html" style="text-decoration: none;">Read More</a></button>
             </div>
             <div class="box">
                 <h3>Quik Links</h3>
