--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
   </ul>
   </li>
-  <li><a href="./
-      
-      /about.html">About Us
+  <li><a href="./About/about.html">About Us
           </a>
   <li><a href="./contact/contact.html">Contact</a></li>
   <li><a href="./faq/faq.html">FAQ</a></li>
