--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </a>
     <input type="checkbox" id="btn-1">
             <ul>
-  <li><a href="#">Products</a></li>
-  <li><a href="#">Services</a></li>
+  <li><a href=".top-products">Products</a></li>
+  <li><a href=".our-services">Services</a></li>
 
   </ul>
   </li>
