add id top-products

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </a>
     <input type="checkbox" id="btn-1">
             <ul>
-  <li><a href=".top-products">Products</a></li>
-  <li><a href=".our-services">Services</a></li>
+  <li><a href="#top-products">Products</a></li>
+  <li><a href="#our-services">Services</a></li>
 
   </ul>
   </li>
@@ -98,7 +98,7 @@
     </main>
 
     <!-- PRODUK TERATAS -->
-    <section class="top-products">
+    <section id="top-products">
         <div class="container">
             <h1 class="section-heading">Top products</h1>
             <div class="slider">
@@ -242,7 +242,7 @@
     </section>
 
     <!-- LAYANAN KAMI -->
-    <section class="our-services">
+    <section id="our-services">
         <div class="container">
             <h1 class="section-heading">Pushbox Services</h1>
             <div class="card-wrapper flex">
