--- a/faq/faq.html
+++ b/faq/faq.html
@@ -13,16 +13,22 @@
       <div class="box">
         <div class="faqs">
            <details>
-              <summary>What is Lorem ipsum?</summary>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <summary>What itu pushbox?</summary>
+              <p class="text">Pushbox adalah aplikasi e-commerce berbasis web yang akan memudahkan para pemilik hewan peliharaan dalam menitipkan hewan peliharaannya</p>
            </details>
            <details>
-              <summary>What is Lorem ipsum?</summary>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <summary>Bagaimana cara memasukkan product ke keranjang?</summary>
+              <p class="text">Anda dapat melakukan langkah seperti berikut ini :</p>
+              <br>1. Klik pada menu 'Category' lalu pilih sub-category 'Product'.
+               <br>2. Cari produk yang ingin Anda masukkan ke keranjang
+               <br>3. Jika produk yang ingin dimasukkan ke keranjang sudah ditemukan selanjutnya klik 'Add to cart'
            </details>
            <details>
-              <summary>What is Lorem ipsum?</summary>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <summary>Bagaimana cara menghubungi kontak admin di aplikasi ini?</summary>
+              <p class="text">Anda dapat kontak kami melalui:
+               <br>1. Call Center di jam 08.00 am - 10.00 pm di nomor 0895362517392.*
+               <br>2. Email melalui halaman <a href="../contact/contact.html">contact us</a> ini.
+           </p>
            </details>
         </div>
         <div class="back-to-home">
