--- a/index.html
+++ b/index.html
@@ -302,19 +302,7 @@
                 <div>
                     <ul>
                         <li>
-                            <a href="https://www.facebook.com/codersgyan">
-                                <img src="./icons/facebook.svg" alt="">
-                                <span>Facebook</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://twitter.com/CoderGyan">
-                                <img src="./icons/twitter.svg" alt="">
-                                <span>Twitter</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.instagram.com/codersgyan/">
+                            <a href="https://www.instagram.com/jamaica.project/">
                                 <img src="./icons/instagram.svg" alt="">
                                 <span>Instagram</span>
                             </a>
