--- a/sign-in-up/sign.html
+++ b/sign-in-up/sign.html
@@ -49,7 +49,7 @@
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="ana@pushbox.com" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
